# slate

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: apply-source-fixes.yml  ci.yml  release.yml
data/: com.slate.editor.desktop  com.slate.editor.metainfo.xml  com.slate.editor.xml
docs/: architecture.md  editor-hardening-plan.md  project-format.md
scripts/: apply-source-fixes.py  capture-ui.sh  package-linux.sh
src/: main.rs
src/document/: command.rs  filter.rs  layer.rs  mask.rs  mod.rs  project.rs
src/image/: color.rs  mod.rs  pipeline.rs  preview.rs  upscale.rs
src/tile/: snapshot.rs
src/tools/: brush.rs  mod.rs  tool.rs
src/ui/: canvas.rs  command_palette.rs  hardening.rs  mod.rs  options_bar.rs  panels.rs  quick_edit.rs  toolbar.rs  window.rs
