[package]
name = "slate"
version = "0.1.0"
edition = "2021"
description = "A fast native Linux image editor with layers, masks, brushes, and filters"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.9" }
libvips = "2.0"
lcms2 = "6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
image = "0.25"
cairo-rs = "0.22"
pango = "0.22"
glib = "0.22"
gdk4 = "0.11"
lru = "0.12"
